# nxt-link-web

./: .env.example  .env.local.example  .gitignore  .mcp.json  .npmrc  .vercelignore  AGENTS.md  CLAUDE.md  CLAUDE_HANDOFF.md  DECISIONS.md  HANDOFF.md  NXT_LINK_WEBSITE_AND_AGENTS_DOCUMENTATION.md  README.md  STATUS.md  docker-compose.yml  fix_iker.py  interactive-globe.tsx  middleware.ts  next.config.mjs  nexus.py  nxt-link-plan.py  package-lock.json  package.json  scan_events.py  scan_news.py  scrape_vendor.py  tailwind.config.ts  vercel.json
archive/services/intelligence/intel_backend/: README.md  pyproject.toml
archive/services/intelligence/intel_backend/app/: __init__.py  config.py  db.py  logging.py  models.py  ontology.py  storage.py
archive/services/intelligence/intel_backend/app/agents/: __init__.py  registry.py  swarm_memory.py
archive/services/intelligence/intel_backend/app/crawler/: circuit_breaker.py  rate_limiter.py
archive/services/intelligence/intel_backend/app/crawler/connectors/: api.py  (+2 more)
archive/services/intelligence/intel_backend/app/ranking/: features.py
archive/services/intelligence/intel_backend/app/state/: engine.py
archive/services/nxt-brain/: README.md  brain.py  pyproject.toml  railway.toml  requirements.txt
archive/services/nxt-brain/agents/: entity.py  feed.py  iker.py  trend.py
archive/services/nxt-brain/api/: server.py
archive/services/nxt-brain/data/: cache.py
archive/services/nxt-brain/engines/: decisions.py  five_whys.py  supply_chain.py
archive/services/nxt-brain/fixes/: enrich_feeds.py  fix_iker.py  fix_signals.py
(+923 files in other folders)
