[tool]
name = "nxt-brain"
version = "0.1.0"
description = "Python intelligence backend for nxtlinktech.com."
authors = ["Cesar <cesar@example.com>"]
license = "MIT"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "fastapi",
    "httpx",
    "rich",
    "uvicorn"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
