[project]
name = "nxtlink-intel-backend"
version = "0.1.0"
description = "24/7 intelligence crawler, classifier, ranking, and trend backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pgvector>=0.3.3",
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  "prefect>=2.19.0",
  "playwright>=1.46.0",
  "trafilatura>=1.12.0",
  "feedparser>=6.0.11",
  "lightgbm>=4.5.0",
  "scikit-learn>=1.5.1",
  "sentence-transformers>=3.0.1",
  "bertopic>=0.16.2",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "python-json-logger>=2.0.7",
  "boto3>=1.35.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.2",
  "mypy>=1.11.2",
]

[tool.ruff]
line-length = 100

